--- a/public/08-internship.html
+++ b/public/08-internship.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Работа в SAPRUN</title>
+		<title>Стажировка в SAPRUN</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -198,6 +198,315 @@
 				</div>
 			</div>
 			<!-- end top-nav-->
+			<!-- start headerBlock-->
+			<div class="headerBlock bg-wrap section bg-dark section section--vh" id="headerBlock">
+				<div class="animate-blur animate-blur--right"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockInternship-bg.jpg" alt=""/>
+				</div>
+				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockInternship-bg-mob.jpg" alt=""/>
+				</div>
+				<div class="container">
+					<div class="headerBlock__inner">
+						<div class="headerBlock__title-block" data-aos="fade-up" data-aos-delay="300">
+							<h1>Стажировка в SAPRUN</h1>
+						</div>
+						<div class="headerBlock__text-block" data-aos="fade-up" data-aos-delay="500">
+							<p>Стажерские программы&nbsp;&mdash; это отличная возможность для выпускников ВУЗов начать карьеру в&nbsp;САПРАН. Наших стажеров обучают лучшие эксперты компании. После обучения у&nbsp;них есть возможность сразу влиться в&nbsp;реальные проекты для ведущих российских компаний.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end headerBlock-->
+			<!-- start sDirections-->
+			<section class="sDirections section bg-white section section--vh" id="sDirections">
+				<div class="container">
+					<div class="section-title">
+						<h2>Направления</h2>
+					</div>
+				</div>
+			</section>
+			<!-- end sDirections-->
+			<!-- start sNews-->
+			<section class="sNews sNews--PressCenter section bg-white section section--vh" id="sNews">
+				<div class="container">
+					<div class="sNews__slider sNews__slider--js swiper sNews sNews--PressCenter__slider--js">
+						<div class="section-title">
+							<div class="row">
+								<div class="col">
+									<h2>Новости</h2>
+								</div>
+								<div class="col-auto"> 
+									<div class="arrow-wrapper">
+										<div class="swiper-button-prev">
+											<svg class="icon icon-chevron-left ">
+												<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
+											</svg>
+										</div>
+										<div class="swiper-button-next">
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-wrapper">
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Онлайн-конференция «Инновационный день фармацевтических компаний 2021»
+									</div>
+									<div class="new-item__text">Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-3.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Онлайн-конференция «Инновационный день фармацевтических компаний 2021»
+									</div>
+									<div class="new-item__text">Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-3.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Онлайн-конференция «Инновационный день фармацевтических компаний 2021»
+									</div>
+									<div class="new-item__text">Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-3.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Онлайн-конференция «Инновационный день фармацевтических компаний 2021»
+									</div>
+									<div class="new-item__text">Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-3.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Онлайн-конференция «Инновационный день фармацевтических компаний 2021»
+									</div>
+									<div class="new-item__text">Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-3.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Онлайн-конференция «Инновационный день фармацевтических компаний 2021»
+									</div>
+									<div class="new-item__text">Организаторами мероприятия 9 декабря выступили компании SAP, SAPRUN и DSM Group (ведущее маркетинговое агентство в сфере исследований фармацевтического рынка).
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-3.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">Сотрудники ИНВИТРО ставят цели  и планируют развитие с помощью SAP SuccessFactors
+									</div>
+									<div class="new-item__text">Москва, Россия – 10 февраля, 2022 года— Группа компаний «Инвитро», одна из крупнейших медицинских групп РФ, продолжает масштабную трансформацию своей HR-функции
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<a class="new-item" href="#">
+									<div class="new-item__title">«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов
+									</div>
+									<div class="new-item__text">Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.
+									</div>
+									<div class="new-item__img-wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/news-2.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="new-item__date">27 июня 2022
+									</div>
+								</a>
+							</div>
+							<div class="sNews__slide swiper-slide">
+								<div class="end-news-card">
+									<div class="end-news-card__title">Перейти в раздел новости
+									</div>
+									<svg class="icon icon-arrow-right-link ">
+										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+									</svg>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-scrollbar"></div>
+					</div>
+				</div>
+			</section>
+			<!-- end sNews-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
@@ -347,6 +656,7 @@
 		<script src="libs/swiper/swiper-bundle.min.js"> </script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
 		<script src="libs/choices.js/public/assets/scripts/choices.min.js"> </script>
+		<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 		<script src="libs/gsap/ScrollTrigger.min.js"> </script>
 		<script src="libs/gsap/gsap.min.js"> </script>
 		<script src="libs/aos/aos.js"> </script>
