--- a/public/12-offices.html
+++ b/public/12-offices.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Работа в SAPRUN</title>
+		<title>Офисы</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -198,198 +198,69 @@
 				</div>
 			</div>
 			<!-- end top-nav-->
-			<!-- start sContent-->
-			<section class="sContent section bg-white section section--vh" id="sContent">
-				<div class="container container--small text-center mb-56" data-aos="fade-up" data-aos-delay="300">
-					<a class="sContent__back mb-32" href="#">
-						<svg class="icon icon-chevron-left ">
-							<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
-						</svg>Вернуться в пресс-центр
-					</a>
-					<div class="sContent__date">12 сентября 2022
-					</div>
-					<h1>SAPRUN вошёл в&nbsp;TOP-5 крупнейших российских аутсорсеров поддержки решений SAP-2020</h1>
-					<div class="sContent__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a><a href="#">#новости команды</a>
-					</div>
+			<!-- start headerBlock-->
+			<div class="headerBlock bg-wrap section" id="headerBlock">
+				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockOffices-bg.jpg" alt=""/>
 				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<p class="h4 mb-32">Donec pellentesque efficitur dui, id&nbsp;dictum ex&nbsp;aliquam&nbsp;id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a&nbsp;sed est.</p>
-					<p class="fw-light mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
+				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockOffices-bg-mob.jpg" alt=""/>
 				</div>
-				<div class="container container--large mb-56" data-aos="fade-up" data-aos-delay="300">
-					<div class="sContent__mediaContent"><img class="object-fit-js" src="img/article-img-1.jpg" alt="" loading="lazy"/>
-					</div>
-				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<h2>Fusce sed auctor nibh</h2>
-					<p class="fw-light mb-0">Quisque ut&nbsp;consectetur risus, in&nbsp;rhoncus urna. Aenean pellentesque, velit id&nbsp;suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et&nbsp;justo pulvinar tincidunt et&nbsp;vel enim. Cras at&nbsp;nulla massa. Nulla metus enim, consequat eu&nbsp;ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
-				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<ul class="sContent__default-list">
-						<li>Proin mollis libero quis lacus posuere, sit amet varius nunc fringilla</li>
-						<li>In posuere, augue eget ornare congue, eros ex bibendum
-							<ul>
-								<li>In finibus vitae lorem nec scelerisque</li>
-								<li>Phasellus eu aliquam ex. Integer facilisis velit lacus, vel venenatis est aliquam sit amet</li>
-							</ul>
-						</li>
-						<li>Proin suscipit placerat turpis</li>
-					</ul>
-				</div>
-				<div class="container container--large mb-56" data-aos="fade-up" data-aos-delay="300">
-					<div class="mediaContent"><img class="object-fit-js" src="img/article-img-2.jpg" alt="" loading="lazy"/>
-					</div><span>Description</span>
-				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<h6 class="mb-32">H6 Header two line words description</h6>
-						<div class="sContent__tableWrap">
-							<table>
-								<thead>
-									<tr>
-										<th scope="col">Maecenas</th>
-										<th scope="col">Phasellus</th>
-										<th scope="col">Gravida</th>
-										<th scope="col">Integer</th>
-									</tr>
-								</thead>
-								<tbody>
-										<tr>
-											<td scope="row">Nullam</td>
-											<td>Tincidunt</td>
-											<td>Tincidunt</td>
-											<td>Dapibus</td>
-										</tr>
-										<tr>
-											<td scope="row">Luctus</td>
-											<td>Mauris</td>
-											<td>Felis</td>
-											<td>Aenean</td>
-										</tr>
-										<tr>
-											<td scope="row">Dignissim</td>
-											<td>Vestibulum</td>
-											<td>Fusce</td>
-											<td>Donec</td>
-										</tr>
-								</tbody>
-							</table>
+				<div class="container">
+					<div class="headerBlock__inner">
+						<div class="headerBlock__title-block" data-aos="fade-up" data-aos-delay="300">
+							<h1>Офисы</h1>
 						</div>
-				</div>
-				<div class="container container--large mb-32" data-aos="fade-up" data-aos-delay="300">
-					<blockquote>
-						<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</h4>
-						<cite>Алексей Литвин<span>Директор</span></cite>
-					</blockquote>
-				</div>
-				<div class="container container--small mb-32" data-aos="fade-up" data-aos-delay="300">
-					<h3 class="mb-32">H3 Header two line words description</h3>
-					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
-				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<ol class="sContent__num-list">
-						<li>Nam luctus orci non suscipit mollis</li>
-						<li>Proin suscipit placerat turpis, vitae fermentum turpis auctor vel
-							<ol>
-								<li>Donec scelerisque massa nec sapien tempus consectetur</li>
-								<li>Morbi vehicula mauris neque</li>
-							</ol>
-						</li>
-						<li>Quisque aliquet nibh nec egestas faucibus</li>
-					</ol>
-				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<div class="sContent__sliderContainer">
-						<div class="sContent__slider sContent__slider--js swiper">
-							<div class="swiper-wrapper">
-									<div class="sContent__slide swiper-slide">
-										<div class="sContent__item"><img class="object-fit-js" src="img/article-img-3.jpg" alt="" loading="lazy"/>
-										</div>
-									</div>
-									<div class="sContent__slide swiper-slide">
-										<div class="sContent__item"><img class="object-fit-js" src="img/article-img-3.jpg" alt="" loading="lazy"/>
-										</div>
-									</div>
-									<div class="sContent__slide swiper-slide">
-										<div class="sContent__item"><img class="object-fit-js" src="img/article-img-3.jpg" alt="" loading="lazy"/>
-										</div>
-									</div>
-							</div>
-						</div>
-						<div class="sContent__arrow-wrap">
-							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
-								<svg class="icon icon-chevron-left ">
-									<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
-								</svg>
-							</div>
-							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
-								<svg class="icon icon-chevron-right ">
-									<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-								</svg>
-							</div>
+						<div class="headerBlock__text-block" data-aos="fade-up" data-aos-delay="500">
+							<p>Компания объединяет профессионалов на&nbsp;рынке аналитических систем и&nbsp;интеграционных решений, сегодня в&nbsp;нашей команде более 300 сотрудников из&nbsp;офисов Москвы, Санкт-Петербурга, Перми.</p>
 						</div>
 					</div>
 				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<h4 class="mb-32">H4 Header two line words description</h4>
-					<h5>H5 Header two line words description</h5>
-					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
-				</div>
-				<div class="container container--small pb-56" data-aos="fade-up" data-aos-delay="300">
-					<div class="share-block">
-						<p>Поделиться</p>
-						<div class="soc">
-							<a class="soc__item" href="#" target="_blank"><img src="img/svg/vk2.svg" alt=""/>
-							</a>
-							<a class="soc__item" href="#" target="_blank"><img src="img/svg/in2.svg" alt=""/>
-							</a>
-							<a class="soc__item" href="#" target="_blank"><img src="img/svg/whatsapp2.svg" alt=""/>
-							</a>
-							<a class="soc__item" href="#" target="_blank"><img src="img/svg/telegram2.svg" alt=""/>
-							</a>
+			</div>
+			<!-- end headerBlock-->
+			<section class="sExperience sExperience--map section" id="sExperience">
+				<div class="sExperience__item section section--vh bg-white">
+					<div class="sExperience__img-wrap">
+						<div class="map" data-center="55.79916256893915, 37.61309849999998" id="map-0"></div>
+					</div>
+					<div class="sExperience__wrap">
+						<h2>Офис Москвы</h2>
+						<div class="sExperience__sub-text">ул. Октябрьская 72, 127521
 						</div>
+						<a class="sExperience__num" href="tel:+74956637759">+7 495 663 7759
+						</a>
+						<a class="sExperience__email" href="mailto:info@saprun.com">info@saprun.com
+						</a>
+					</div>
+				</div>
+				<div class="sExperience__item section section--vh bg-dark">
+					<div class="sExperience__img-wrap">
+						<div class="map" data-center="59.98682106410957, 30.32125800000001" id="map-1"></div>
+					</div>
+					<div class="sExperience__wrap">
+						<h2>Офис Санкт-Петербурга</h2>
+						<div class="sExperience__sub-text">ул. Белоостровская 17к2, 197342
+						</div>
+						<a class="sExperience__num" href="tel:+74956637759">+7 495 663 7759
+						</a>
+						<a class="sExperience__email" href="mailto:info@saprun.com">info@saprun.com
+						</a>
+					</div>
+				</div>
+				<div class="sExperience__item section section--vh bg-white">
+					<div class="sExperience__img-wrap">
+						<div class="map" data-center="57.98969856659982, 56.20387749999989" id="map-2"></div>
+					</div>
+					<div class="sExperience__wrap">
+						<h2>Офис Перми</h2>
+						<div class="sExperience__sub-text">ул. Стахановская д.54И, 614066
+						</div>
+						<a class="sExperience__num" href="tel:+74956637759">+7 495 663 7759
+						</a>
+						<a class="sExperience__email" href="mailto:info@saprun.com">info@saprun.com
+						</a>
 					</div>
 				</div>
 			</section>
-			<!-- end sContent-->
-			<!-- start sService-->
-			<section class="sService sService--2 section bg-white" id="sService">
-				<div class="container container--small">
-					<div class="row">
-						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
-							<a class="sService__item" href="#">
-								<div class="sService__link sService__link--left d-none d-md-inline-block">
-									<svg class="icon icon-arrow-left-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-left-link"></use>
-									</svg>
-								</div>
-								<div class="sService__link sService__link--left d-inline-block d-md-none">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
-								<div class="sService__title">12 сентября 2022
-								</div>
-								<div class="sService__caption">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.
-								</div>
-							</a>
-						</div>
-						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
-							<a class="sService__item" href="#">
-								<div class="sService__link sService__link--right">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
-								<div class="sService__title">6 сентября 2022
-								</div>
-								<div class="sService__caption">Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.
-								</div>
-							</a>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end sService-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
